--- a/Terms-Of-Use.html
+++ b/Terms-Of-Use.html
@@ -87,9 +87,10 @@
             <li>Be overly toxic</li>
             <li>Leave any official chat without two weeks of FORMAL resignation to a Abacromby Studios Official</li>
             <li>Block the Chief Executive Officer or Assistant Chief Executive Officer</li>
+            <li>You must be active or you must be approved for LoA (Leave of Absence) or RA (Reduced Activity) </li>
         </ul>
     </div>
-
+l
 </body>
 </html>
 
