--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
                 <li><a href="PLP-L-4.html" class="login-button">Login L4</a></li>
                 <li><a href="PLP-L-5.html" class="login-button">Login L5</a></li>
                 <li class="policy-buttons">
-                    <a href="/Terms-of-Use" class="policy-button">Terms of Use</a>
-                    <a href="/Privacy-Policy" class="policy-button">Privacy Policy</a>
+                    <a href="/Terms-Of-Use.html" class="policy-button">Terms of Use</a>
+                    <a href="/Privacy-Policy.html" class="policy-button">Privacy Policy</a>
                 </li>
             </ul>
         </nav>
