--- a/Alpha-1-RRH-Terminal.html
+++ b/Alpha-1-RRH-Terminal.html
@@ -93,7 +93,7 @@
     </style>
 </head>
 <body>
-    <img id="scp-logo" src="https://media.discordapp.net/attachments/1338795848619917315/1348598592431980590/output-onlinepngtools_upscayl_4x_realesrgan-x4plus-anime.png?ex=67d00bd0&is=67ceba50&hm=4e1c1bc8eeead37b748c355e8a719e35565de78b29a1fbd97edfbb9302cdde74&" alt="SCP Logo" style="opacity: 0;">
+    <img id="scp-logo" src="https://media.discordapp.net/attachments/1342243224638722229/1350423020023320639/TLW2rYz.png?ex=67d6aef1&is=67d55d71&hm=4c107adc3dd2796388db95e2a28e6edad15ae29128dc77b08187c44018adfb51&5565de78b29a1fbd97edfbb9302cdde74&" alt="SCP Logo" style="opacity: 0;">
     <div id="terminal-container">
         <div id="terminal"></div>
         <button class="digital-button" onclick="window.location.href='https://armed-research-and-containment-site-omegon.vercel.app/L-5-Dashboard.html'">Access L-5 Main Dashboard</button>
