--- a/Terms-Of-Use.html
+++ b/Terms-Of-Use.html
@@ -177,6 +177,14 @@ l
         <p>Any dispute arising from these terms will first be addressed through mandatory mediation in Pennsylvania. If unresolved, disputes will proceed to binding arbitration under AAA rules. You agree to resolve any claims on an individual basis and waive any right to pursue claims as a class action or press any kind of charges against any individual above Assistant Chief Executive Officer of Abacromby Studios.</p>
     </div>
 
+<div class="section">
+        <h2>GOVERNING JURISDICTION</h2>
+        <p>
+        <p>NOTE: By using any of our software for more than 100 minutes you automatically agree to these terms</p>
+
+        <p>Also be noted: For any questions, concerns, or inquiries regarding this legally binding agreement between us and you, feel free to reach out to our certified legal team at Abacromby Studios.</p>
+</div>
+
     <div class="section">
         <h2>WARRANTY DISCLAIMER</h2>
         <p>THE SERVICE, IS PROVIDED "AS IS," WITHOUT WARRANTY OF ANY KIND. WITHOUT LIMITING THE FOREGOING, WE EXPRESSLY DISCLAIM ALL WARRANTIES, WHETHER EXPRESS, IMPLIED OR STATUTORY, REGARDING THE SERVICE INCLUDING WITHOUT LIMITATION ANY WARRANTY OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, TITLE, SECURITY, ACCURACY AND NON-INFRINGEMENT. WITHOUT LIMITING THE FOREGOING, WE MAKE NO WARRANTY OR REPRESENTATION THAT ACCESS TO OR OPERATION OF THE SERVICE WILL BE UNINTERRUPTED OR ERROR FREE. YOU ASSUME FULL RESPONSIBILITY AND RISK OF LOSS RESULTING FROM YOUR DOWNLOADING AND/OR USE OF FILES, INFORMATION, CONTENT OR OTHER MATERIAL OBTAINED FROM THE SERVICE. SOME JURISDICTIONS LIMIT OR DO NOT PERMIT DISCLAIMERS OF WARRANTY, SO THIS PROVISION MAY NOT APPLY TO YOU.</p>
@@ -208,12 +216,8 @@ l
     </div>
 
     <div class="section">
-        <h2>ACKNOWLEDGMENT</h2>
-        <p>YOU ACKNOWLEDGE THAT YOU HAVE READ THESE TERMS OF USE, UNDERSTAND THE TERMS OF USE, AND WILL BE BOUND BY THESE TERMS AND CONDITIONS. YOU FURTHER ACKNOWLEDGE THAT THESE TERMS OF USE TOGETHER WITH THE PRIVACY POLICY AT https://sites.google.com/view/site-omegon/Privacy REPRESENT THE COMPLETE AND EXCLUSIVE STATEMENT OF THE AGREEMENT BETWEEN US AND THAT IT SUPERSEDES ANY PROPOSAL OR PRIOR AGREEMENT ORAL OR WRITTEN, AND ANY OTHER COMMUNICATIONS BETWEEN US RELATING TO THE SUBJECT MATTER OF THIS AGREEMENT.</p>
-
-        <p>NOTE: By using any of our software for more than 100 minutes you automatically agree to these terms</p>
-
-        <p>Also be noted: For any questions, concerns, or inquiries regarding this legally binding agreement between us and you, feel free to reach out to our certified legal team at Abacromby Studios.</p>
-    </div>
+        <h2>GOVERNING JURISDICTION</h2>
+        <p>The governing jurisdiction of tbis agreement will be The United States of America, Commonwealth of Pennsylvania, McKean County.
+        </div>
 </body>
 </html>
