--- a/Terms-Of-Use.html
+++ b/Terms-Of-Use.html
@@ -179,10 +179,7 @@ l
 
 <div class="section">
         <h2>GOVERNING JURISDICTION</h2>
-        <p>
-        <p>NOTE: By using any of our software for more than 100 minutes you automatically agree to these terms</p>
-
-        <p>Also be noted: For any questions, concerns, or inquiries regarding this legally binding agreement between us and you, feel free to reach out to our certified legal team at Abacromby Studios.</p>
+        <p>The governing jurisdiction of this legally binding document purcured by Abacromby9 Studio Legal Team shall be United States of America, Commonwealth of Pennsylvania, McKean County for any and all laws and procedimgs that cannot be resolved through binding arbitration under AAA rules</p>
 </div>
 
     <div class="section">
