--- a/Terms-Of-Use.html
+++ b/Terms-Of-Use.html
@@ -179,7 +179,7 @@ l
 
 <div class="section">
         <h2>GOVERNING JURISDICTION</h2>
-        <p>The governing jurisdiction of this legally binding document purcured by Abacromby9 Studio Legal Team shall be United States of America, Commonwealth of Pennsylvania, McKean County for any and all laws and procedimgs that cannot be resolved through binding arbitration under AAA rules</p>
+        <p>The governing jurisdiction of this legally binding document purcured by Abacromby9 Studio Legal Team shall be United States of America, Commonwealth of Pennsylvania, McKean County for any and all laws and procedings that cannot be resolved through binding arbitration under AAA rules</p>
 </div>
 
     <div class="section">
