--- a/Terms-Of-Use.html
+++ b/Terms-Of-Use.html
@@ -30,7 +30,7 @@
     <h1>Abacromby Studios Terms of Use</h1>
     
     <div class="dates">
-        Created: 5/08/2024<br>
+        Created: 1/08/2024<br>
         Last Revised: 12/24/2024<br>
         Effective: 12/24/2024
     </div>
@@ -200,6 +200,9 @@ l
         <h2>MODIFICATION OF TERMS OF USE</h2>
         <p>We can amend these Terms of Use at any time and will update these Terms of Use in the event of any such amendments. It is your sole responsibility to check the Site from time to time to view any such changes in this agreement. Your continued use of the Site or the Service signifies your agreement to our revisions to these Terms of Use. We will endeavor to notify you of material changes to the Terms by posting a notice on our homepage and/or sending an email to the email address you provided to us upon registration. For this additional reason, you should keep your contact and profile information current. Any changes to these Terms (other than as set forth in this paragraph) or waiver of our rights hereunder shall not be valid or effective except in a written agreement bearing the physical signature of one of our officers. No purported waiver or modification of this agreement on our part via telephonic or email communications shall be valid.</p>
     </div>
+    <div class="section">
+         <h2>Activity Requirements</h2>
+        <p>You are required to follow company policy in regards to activity and if you cannot meet company policies due to any reasonable reason you van follow company policy on Leave of Absence or a Ruduced Activity</p>
 
     <div class="section">
         <h2>GENERAL TERMS</h2>
@@ -211,7 +214,5 @@ l
 
         <p>We may assign or delegate these Terms of Service and/or our Privacy Policy, in whole or in part, to any person or entity at any time with or without your consent. You may not assign or delegate any rights or obligations under the Terms of Service or Privacy Policy without our prior written consent, and any unauthorized assignment or delegation by you is void.</p>
     </div>
-
-    <div class="section">
 </body>
 </html>
