--- a/Terms-Of-Use.html
+++ b/Terms-Of-Use.html
@@ -213,6 +213,8 @@ l
         <p>These Terms of Use and your use of the Site are governed by the federal laws of the United States of America and the laws of the Commonwealth of Pennsylvania without regard to conflict of law provisions.</p>
 
         <p>We may assign or delegate these Terms of Service and/or our Privacy Policy, in whole or in part, to any person or entity at any time with or without your consent. You may not assign or delegate any rights or obligations under the Terms of Service or Privacy Policy without our prior written consent, and any unauthorized assignment or delegation by you is void.</p>
+
+        <p>You agree to these terms by accessing our services for more then ninty (90) minutes</p>
     </div>
 </body>
 </html>
