--- a/Nu-7-HD-Terminal.html
+++ b/Nu-7-HD-Terminal.html
@@ -113,7 +113,7 @@ Terminal booted
 
  
 
-                                                    > login Epsilons_eleven.MobileTaskForce.nine.tailed.fox 
+                                                    > login nulu-seven.MobileTaskForce.hammer.down
 LOGGING IN
 .
 .
@@ -121,13 +121,13 @@ LOGGING IN
 
 PLEASE ENTER PASSWORD.
      
-                                     > pass echo.phoenix.sierra.india.lima.omega.november.e1even.ntf 
+                                     > pass November.union.lincoln.union.seven.mtf.hd.267
 
 
 
 LOGGING IN…
 
-Welcome Mobile Task Force Nu-7-11 ("Hammer Down")
+Welcome Mobile Task Force Nu-7 ("Hammer Down")
 
 YOU HAVE NO NEW NOTIFICATION(S)
 
