--- a/Resh-1-SoC-Terminal.html
+++ b/Resh-1-SoC-Terminal.html
@@ -128,7 +128,7 @@ PLEASE ENTER PASSWORD.
 
 LOGGING IN…
 
-Welcome Mobile Task Force Resh-1 ("Seat of Consciousness")
+Welcome Mobile Task Force Resh-1 ("Seat of Consciousness") Detachment "BLACK"
 
 YOU HAVE NO NEW NOTIFICATION(S)
 
