--- a/Epsilon-11-NTF-Terminal.html
+++ b/Epsilon-11-NTF-Terminal.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mobile Task Force Beta-7 Dashboard</title>
+    <title>Mobile Task Force Epsilon-11 Dashboard</title>
     <style>
         body {
             background-color: #000;
@@ -81,7 +81,7 @@
     </style>
 </head>
 <body>
-    <img id="scp-logo" src="https://media.discordapp.net/attachments/1338795848619917315/1348598592431980590/output-onlinepngtools_upscayl_4x_realesrgan-x4plus-anime.png?ex=67d00bd0&is=67ceba50&hm=4e1c1bc8eeead37b748c355e8a719e35565de78b29a1fbd97edfbb9302cdde74&" alt="SCP Logo" style="opacity: 0;">
+    <img id="scp-logo" src="https://media.discordapp.net/attachments/1356531198532386971/1356531382981234748/RmCylzz.png?ex=67f0dc4c&is=67ef8acc&hm=b55c8d91234129899af26e344faeadce0e0341c77ddfce2e6b6db64c8e5499b6&5565de78b29a1fbd97edfbb9302cdde74&" alt="SCP Logo" style="opacity: 0;">
     <div id="terminal-container">
         <div id="terminal"></div>
         <button class="digital-button" onclick="window.location.href='https://armed-research-and-containment-site-omegon.vercel.app/L-4-Dashboard.html'">Access L-5 Main Dashboard</button>
