--- a/Beta-7-MH-Terminal.html
+++ b/Beta-7-MH-Terminal.html
@@ -93,7 +93,7 @@
     </style>
 </head>
 <body>
-    <img id="scp-logo" src="https://media.discordapp.net/attachments/1338795848619917315/1348598592431980590/output-onlinepngtools_upscayl_4x_realesrgan-x4plus-anime.png?ex=67d00bd0&is=67ceba50&hm=4e1c1bc8eeead37b748c355e8a719e35565de78b29a1fbd97edfbb9302cdde74&" alt="SCP Logo" style="opacity: 0;">
+    <img id="scp-logo" src="https://media.discordapp.net/attachments/1356531198532386971/1356531429172973698/a5fp1Io.png?ex=67f0dc57&is=67ef8ad7&hm=4f1a6a80b1f9e70317b6184cf5a41f6e7dd5a6e379a9ed16730d31e8bea74823&5565de78b29a1fbd97edfbb9302cdde74&" alt="SCP Logo" style="opacity: 0;">
     <div id="terminal-container">
         <div id="terminal"></div>
         <button class="digital-button" onclick="window.location.href='https://armed-research-and-containment-site-omegon.vercel.app/L-4-Dashboard.html'">Access L-5 Main Dashboard</button>
