--- a/Terms-Of-Use.html
+++ b/Terms-Of-Use.html
@@ -80,7 +80,7 @@
             <li>Discriminate a user by skin color or race.</li>
             <li>Exploit any known or unknown bugs or glitches within our game</li>
             <li>DDoS or DoS a user or staff member or service provided by us</li>
-            <li>Døxx a user or staff member</li>
+            <li>Doxx a user or staff member</li>
             <li>Use any third-party clients to access or use the game</li>
             <li>Obscene in any way, or Not Safe For Work (NSFW, or in other words sexual, obscene, or otherwise shocking.)</li>
             <li>Troll users or staff members.</li>
@@ -88,6 +88,7 @@
             <li>Leave any official chat without two weeks of FORMAL resignation to a Abacromby Studios Official</li>
             <li>Block the Chief Executive Officer or Assistant Chief Executive Officer</li>
             <li>You must be active or you must be approved for LoA (Leave of Absence) or RA (Reduced Activity) </li>
+            <li>Fail to obey a superior member's orders, instructions, or denands etc.</li>
         </ul>
     </div>
 l
