--- a/Terms-Of-Use.html
+++ b/Terms-Of-Use.html
@@ -85,7 +85,7 @@
             <li>Obscene in any way, or Not Safe For Work (NSFW, or in other words sexual, obscene, or otherwise shocking.)</li>
             <li>Troll users or staff members.</li>
             <li>Be overly toxic</li>
-            <li>Leave any official chat without two weeks of FORMAL resignation to a Abacromby Studios Official</li>
+            <li>Leave any official chat without notice two weeks of FORMAL resignation to a Abacromby Studios Official</li>
             <li>Block the Chief Executive Officer or Assistant Chief Executive Officer</li>
             <li>You must be active or you must be approved for LoA (Leave of Absence) or RA (Reduced Activity) </li>
             <li>Fail to obey a superior member's orders, instructions, or denands etc.</li>
@@ -203,7 +203,7 @@ l
     </div>
     <div class="section">
          <h2>Activity Requirements</h2>
-        <p>You are required to follow company policy in regards to activity and if you cannot meet company policies due to any reasonable reason you van follow company policy on Leave of Absence or a Ruduced Activity</p>
+        <p>You are required to follow company policy in regards to activity and if you cannot meet company policies due to any reasonable reason you can follow company policy on Leave of Absence or a Ruduced Activity</p>
 
     <div class="section">
         <h2>GENERAL TERMS</h2>
