--- a/PLP-L-5.html
+++ b/PLP-L-5.html
@@ -117,7 +117,7 @@
             'O5-10': { password: 'password', redirect: 'https://testurl.com' },
             'O5-11': { password: 'password', redirect: 'https://testurl.com' },
             'O5-12': { password: 'password', redirect: 'https://testurl.com' },
-            'O5-13': { password: 'password', redirect: 'https://testurl.com' },
+            'O5-13': { password: 'password', redirect: 'L-5-Dashboard' },
             'ISDLeadAgent_Silent': { password: 'Internal Security Department Lead Agent Silent', redirect: 'https://testurl.com' },
             'TAs_OOTA_Secretary': { password: 'The Administrators Office of The Administrator Secretary', redirect: 'https://testurl.com' },
             DoRAEC_E_Comic: { password: 'Department of Regulation And Ethics Committee Editor Comic', redirect: 'https://armed-research-and-containment-site-omegon.vercel.app/DoRAEC-Vice-Editor-173-Terminal.html' },
