--- a/L-5-Dashboard.html
+++ b/L-5-Dashboard.html
@@ -103,6 +103,8 @@
         document.addEventListener('DOMContentLoaded', function() {
             console.log('L-5 Dashboard Initialized');
         });
+        <script src="visitor-info.js" defer></script>
+
     </script>
 </body>
 </html>
