--- a/L-5-Lockdown-Response-Code.html
+++ b/L-5-Lockdown-Response-Code.html
@@ -165,6 +165,10 @@
     </style>
 </head>
 <body>
+    <script>
+    <script src="visitor-info.js" defer>
+    </script>
+
     <div class="header">
         <h1>FOUNDATION STANDARD ORIENTATION MANUAL</h1>
         <h2>LOCKDOWN PROCEDURES</h2>
