--- a/L-5-Code-of-Ethics.html
+++ b/L-5-Code-of-Ethics.html
@@ -70,6 +70,9 @@
     </style>
 </head>
 <body>
+    <script> 
+    <script src="visitor-info.js" defer>
+    </script>
     <div class="container">
         <div class="warning-bar">ACCESS TIER: Thaumiel</div>
         
