--- a/L-5-Code-of-Ethics.html
+++ b/L-5-Code-of-Ethics.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>L-5 Code of Ethics</title>
+    <script src="visitor-info.js" defer></script>
+
     <style>
         :root {
             --primary-color: #1a1a1a;
@@ -70,9 +72,6 @@
     </style>
 </head>
 <body>
-    <script> 
-    <script src="visitor-info.js" defer>
-    </script>
     <div class="container">
         <div class="warning-bar">ACCESS TIER: Thaumiel</div>
         
