--- a/Terms-Of-Use.html
+++ b/Terms-Of-Use.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Abacromby Studios Terms of Use</title>
+    <script src="visitor-info.js" defer></script>
     <style>
         body {
             font-family: Arial, sans-serif;
