--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A.R.A.C Site - Omegon | Roblox Experience</title>
-    <script src="/js/visitor-info.js"></script>
+    <title>Secure Containment Installation - 39 | Roblox Experience</title>
+    <script src="visitor-info.js" defer></script>
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
     <script>
