--- a/Privacy-Policy.html
+++ b/Privacy-Policy.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Abacromby Studios Privacy Policy</title>
+    <script src="visitor-info.js" defer></script>
     <style>
         body {
             font-family: Arial, sans-serif;
