--- a/PLP-L-3.html
+++ b/PLP-L-3.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>SCP Foundation Secure Login</title>
-    <script src="/js/visitor-info.js"></script>
+   <script src="visitor-info.js" defer></script>
     <style>
         body {
             background: #000;
