--- a/L-4-Code-of-Ethics.html
+++ b/L-4-Code-of-Ethics.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>L-4 Code of Ethics</title>
+    <script src="visitor-info.js" defer></script>
     <style>
         :root {
             --primary-color: #1a1a1a;
