--- a/L-3-Lockdown-Response-Code.html
+++ b/L-3-Lockdown-Response-Code.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>SCP Foundation - Lockdown Procedures Manual</title>
+    <script src="visitor-info.js" defer></script>
     <style>
         :root {
             --bg-primary: #0f0f0f;
