--- a/L-3-Dashboard.html
+++ b/L-3-Dashboard.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>L-3 Command Dashboard</title>
+    <script src="visitor-info.js" defer></script>
     <style>
         body {
             background: #000;
