--- a/ISD-Terminal.html
+++ b/ISD-Terminal.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mobile Task Force Beta-7 Dashboard</title>
+    <title>Internal Security Department Dashboard</title>
+    <script src="visitor-info.js" defer></script>
     <style>
         body {
             background-color: #000;
