--- a/DoRAEC-Vice-Editor-173-Terminal.html
+++ b/DoRAEC-Vice-Editor-173-Terminal.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dept of Regulations & Ethics Committee BoD Office 1</title>
+    <title>Dept of Regulations & Ethics Committee Vice Editor Office 1</title>
+    <script src="visitor-info.js" defer></script>
     <style>
         body {
             background-color: #000;
