--- a/Contact.html
+++ b/Contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Emails</title>
+    <script src="visitor-info.js" defer></script>
     <style>
         * {
             margin: 0;
@@ -96,22 +97,22 @@
         <h1>Our Team Contacts</h1>
         <div class="email-container">
             <div class="email-card">
-                <input type="text" class="email-input" value="scpf.site.omegon.human.resources@tidio.xyz" readonly>
+                <input type="text" class="email-input" value="human-resources@abacromby9-studios.xyz" readonly>
             </div>
             <div class="email-card">
-                <input type="text" class="email-input" value="scpf.site.omegon.website.dev@tidio.xyz" readonly>
+                <input type="text" class="email-input" value="web-master@abacromby9-studios.xyz" readonly>
             </div>
             <div class="email-card">
-                <input type="text" class="email-input" value="site.omegon.game.development.team@tidio.xyz" readonly>
+                <input type="text" class="email-input" value="game-development@abacromby9-studios.xyz" readonly>
             </div>
             <div class="email-card">
-                <input type="text" class="email-input" value="scpf.site.omegon.game.support@tidio.xyz" readonly>
+                <input type="text" class="email-input" value="support@abacromby9-studios" readonly>
             </div>
             <div class="email-card">
-                <input type="text" class="email-input" value="legal.site.omegon@tidio.xyz" readonly>
+                <input type="text" class="email-input" value="legal@abacromby9-studios" readonly>
             </div>
             <div class="email-card">
-                <input type="text" class="email-input" value="site.omegon.bot.development.team@tidio.xyz" readonly>
+                <input type="text" class="email-input" value="bot-master@abacromby9-studios" readonly>
             </div>
         </div>
     </div>
