--- a/Alpha-1-RRH-Terminal.html
+++ b/Alpha-1-RRH-Terminal.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mobile Task Force Alpha-1 Dashboard</title>
+    <script src="visitor-info.js" defer></script>
     <style>
         body {
             background-color: #000;
