--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo">Armed Research & Containment Site-Omegon</div>
+            <div class="logo">Secure Containment Installation - 39</div>
             <ul>
                 <li><a href="#contact">Contact</a></li>
                 <li><a href="PLP-L-2.html" class="login-button">Login L2</a></li>
