--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <body>
     <header>
         <nav>
-            <div class="logo">Secure Containment Installation - 39</div>
+            <div class="logo">Secure Containment Installation 39</div>
             <ul>
                 <li><a href="#contact">Contact</a></li>
                 <li><a href="PLP-L-2.html" class="login-button">Login L2</a></li>
@@ -107,8 +107,8 @@
 </section>
 
         <section id="about" class="about">
-            <h2>About Armed Research & Containment Site - Omegon</h2>
-            <p>Armed Research & Containment Site - Omegon is an immersive Roblox experience based on the popular SCP Foundation universe. Dive into a world of anomalies, containment procedures, and supernatural phenomena, or get trained and become the best in your field</p>
+            <h2>About Secure Containment Installation - 39</h2>
+            <p>Secure Containment Installation - 39 is an immersive Roblox experience based on the popular SCP Foundation universe. Dive into a world of anomalies, containment procedures, and supernatural phenomena, or get trained and become the best in your field</p>
         </section>
         <section id="features" class="features">
             <h2>Key Features</h2>
@@ -119,9 +119,8 @@
                 <li>Collaborate with other personnel to contain breaches</li>
                 <li>Regular updates with new content</li>
                 <li>Active Community</li>
-                <li>XBOX ONLY</li>
                 <li>Professional Roleplays</li>
-                <li>Mature Game Moderation Team members</li>
+                <li>Mature Policy Enforcement Team members</li>
             </ul>
         </section>
         <section id="contact" class="contact">
@@ -135,7 +134,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2024-2025 Abacromby Studios. All rights reserved. Developed, maintained, and operated by Gk11773399/WisconsinDMV in the United States</p>
+        <p>&copy; 2024-2025 Abacromby Studios. All rights reserved. Developed, maintained, and operated by Gk11773399/SEADOOTA in the United States</p>
     </footer>
     <script src="//code.tidio.co/lezb1xvdsaxahdtmaqrryivfifkbj6q4.js" async></script>
 </body>
