--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <section id="home" class="hero">
     <h1>Welcome to Secure Containment Installation - 39</h1>
     <p>join, get trained, do your job, HAVE A FUN TIME!</p>
-    <a href="https://www.roblox.com/games/17449989711/SCP-F-Armed-Research-Containment-Site-Omegon?gameSetTypeId=100000003&homePageSessionInfo=84979d26-9052-4572-9e57-78fdb9f755fa&isAd=false&numberOfLoadedTiles=5&page=homePage&placeId=17449989711&playContext=homePage&position=0&sortPos=3&universeId=5971868203" class="cta-button">Play Now</a>
+    <a href="https://www.roblox.com/games/137282593122733/Secure-Containment-Installation-39" class="cta-button">Play Now</a>
 </section>
 
         <section id="about" class="about">
