--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <span>Secure Containment Installation 39</span>
             </div>
             <ul>
-                <li><a href="/contact.html">Contact</a></li>
+                <li><a href="/Contact.html">Contact</a></li>
                 <li><a href="PLP-L-2.html" class="login-button">L2</a></li>
                 <li><a href="PLP-L-3.html" class="login-button">L3</a></li>
                 <li><a href="PLP-L-4.html" class="login-button">L4</a></li>
