--- a/index.html
+++ b/index.html
@@ -120,17 +120,17 @@
                     <div class="contact-option">
                         <h3>Website Feedback</h3>
                         <p>Have questions or suggestions regarding the website?</p>
-                        <a href="/contact.html" class="contact-button">Contact Website Team</a>
+                        <a href="/Contact.html" class="contact-button">Contact Website Team</a>
                     </div>
                     <div class="contact-option">
                         <h3>Game Feedback</h3>
                         <p>Have questions or suggestions regarding the Game?</p>
-                        <a href="/contact.html" class="contact-button">Contact Game Developers</a>
+                        <a href="/Contact.html" class="contact-button">Contact Game Developers</a>
                     </div>
                     <div class="contact-option">
                         <h3>Legal Inquiries</h3>
                         <p>Have legal requests?</p>
-                        <a href="/contact.html" class="contact-button">Contact Legal Team</a>
+                        <a href="/Contact.html" class="contact-button">Contact Legal Team</a>
                     </div>
                 </div>
             </div>
